# dream-stellar

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: cxx_config.cmake  (+2 more)
src/: CMakeLists.txt  raptor_main.cpp  raptor_search.cpp  sliding_window_build.cpp  sliding_window_main.cpp  sliding_window_search.cpp  sliding_window_split.cpp  valik_build.cpp  valik_consolidate.cpp  valik_main.cpp  valik_search.cpp  valik_split.cpp
src/argument_parsing/: build.cpp  consolidate.cpp  search.cpp  shared.cpp  split.cpp  top_level.cpp
src/consolidate/: consolidate_matches.cpp  io.cpp  merge_processes.cpp
src/prepare/: compute_bin_size.cpp
src/raptor/threshold/: one_indirect_error_model.cpp  threshold.cpp
src/search/: compute_simple_model.cpp  minimiser_model.cpp
src/search/detail/: helper.cpp
src/split/: write_seg_sequences.cpp
src/split/detail/: helper.cpp
src/threshold/: find.cpp  io.cpp
test/: CMakeLists.txt
test/api/: CMakeLists.txt
test/api/sliding_window/: CMakeLists.txt
test/api/sliding_window/search/: CMakeLists.txt  search_setup_test.cpp
test/api/utilities/: CMakeLists.txt
test/api/utilities/consolidate/: CMakeLists.txt  consolidate_matches_test.cpp  stellar_match_test.cpp
test/api/utilities/prepare/: CMakeLists.txt  compute_bin_size_test.cpp
test/api/utilities/threshold/: CMakeLists.txt  basics_test.cpp  find_test.cpp  kmer_attributes_test.cpp  kmer_loss_test.cpp  param_set_test.cpp
test/api/valik/: CMakeLists.txt
test/api/valik/search/: CMakeLists.txt  local_prefilter_test.cpp  search_setup_test.cpp
test/api/valik/split/: CMakeLists.txt  adjust_bin_count_test.cpp  find_segment_length_test.cpp  metadata_test.cpp  next_power_of_two_test.cpp  reference_segments_test.cpp  segment_metadata_test.cpp  set_segment_arguments_test.cpp  trim_fasta_id_test.cpp  write_seg_sequences_test.cpp
test/cli/: CMakeLists.txt  README.md  app_test_cli_base.hpp  cli_test.hpp  dream_test.cpp  raptor_options_test.cpp  raptor_test.cpp  sliding_window_options_test.cpp  sliding_window_test.cpp  valik_options_test.cpp  valik_test.cpp
test/cmake/: build_googletest.cmake
test/data/: .gitignore  8bins20window.ibf  8bins23window.ibf  README.md  bin_0_metadata.txt  create_output.sh  datasources.cmake  helper_script.sh  index.ibf  query.fq  reference_metadata.txt  search_1u.out  search_2u.out  search_3u.out  segment_metadata.txt  segments.tsv  simulate_input.sh  update_datasources.sh
test/data/bins/: bin_0.fasta  bin_1.fasta  bin_2.fasta  bin_3.fasta  bin_4.fasta  bin_5.fasta  bin_6.fasta  bin_7.fasta
test/data/consolidate/: 0_0_0.stdout  0_0_131.gff  0_0_162.stdout  0_0_243.stdout  0_0_324.stdout  0_0_405.stdout  0_0_486.stdout  0_0_81.stdout  0_162_293.gff  0_1_0.stdout  0_1_156.stdout  0_1_234.stdout  0_1_312.stdout  0_1_390.stdout  0_1_78.stdout  0_243_374.gff  0_2_0.stdout  0_2_142.stdout  0_2_71.stdout  0_324_455.gff  0_405_536.gff  0_486_560.gff  0_81_212.gff  10overlap_full.gff  16bins10overlap_dream_all.gff  16bins10overlap_dream_consolidated.gff  16bins10overlap_reference_metadata.tsv  16bins50overlap_dream_all.gff  16bins50overlap_dream_all.gff.out  16bins50overlap_dream_consolidated.gff  16bins50overlap_reference_metadata.arg  16bins50overlap_reference_metadata.index  16bins50overlap_reference_metadata.tsv  1_0_128.gff  1_156_284.gff  1_312_440.gff  1_78_206.gff  2_71_192.gff  50overlap_full.gff  8bins10overlap_dream_all.gff  (+34 more)
test/data/dream/: 16bins13window.ibf  16bins15window.ibf  1error.gff  1error.gff.out  1error_stellar.gff  2error.gff  2error.gff.out  2error_50pattern_index.arg  2error_stellar.gff  4bins13window.ibf  4bins13window1error.gff  4bins13window1error.gff.out  4bins15window.ibf  4bins15window1error.gff  4bins15window1error.gff.out  4bins15window1error.gff.preliminary  cli_test_input.sh  cli_test_output.sh  dummy_reads.fastq  meta_param_deduction.arg  query.fasta  query.fastq  query_meta.txt  query_seg_meta.txt  ref.fasta  ref_meta.txt  reference_metadata.arg  seg_files.txt  seg_meta0overlap16bins.txt  seg_meta0overlap4bins.txt  seg_meta150overlap16bins.txt  seg_meta150overlap4bins.txt  seg_meta20overlap16bins.txt  seg_meta20overlap4bins.txt  stellar.disabled.fasta  stellar.gff  test.gff
test/data/fly_genome/: get_fly_genome.sh
test/data/prepare/: api_test_input.sh  s1001.arg  s1001.ibf  s10100101.ibf  s111110011111.arg  s11111111.arg  s11111111.ibf
test/data/prepare/bins/: ref_0.fasta  ref_1.fasta  ref_2.fasta  ref_3.fasta  ref_4.fasta  ref_5.fasta  ref_6.fasta  ref_7.fasta
test/data/prepare/s1001/: ref.0.header  ref.1.minimiser  ref.2.header  ref.2.minimiser  ref.4.header  ref.4.minimiser  ref.5.header  ref.5.minimiser  ref.6.header
test/data/prepare/s111110011111/: ref.2.minimiser  ref.3.minimiser  ref.7.header  (+11 more)
test/data/search/: 8bins19window0error100pattern1query_every.gff.out  8bins19window0error100pattern50query_every.gff.out  8bins19window0error50pattern1query_every.gff.out  8bins19window0error50pattern50query_every.gff.out  8bins19window1error100pattern1query_every.gff.out  8bins19window1error100pattern50query_every.gff.out  8bins19window1error50pattern1query_every.gff.out  8bins19window1error50pattern50query_every.gff.out  8bins23window0error50pattern50query_every.gff.out  8bins23window1error100pattern1query_every.gff.out  8bins23window1error100pattern50query_every.gff.out  8bins23window1error50pattern1query_every.gff.out  8bins23window1error50pattern50query_every.gff.out  cli_test_input.sh  cli_test_output.sh  query.fq  repetitive_query.fasta  repetitive_reference.fasta
test/data/split/: 0overlap16bins.txt  0overlap4bins.txt  20overlap16bins.txt  20overlap4bins.txt  Create segments from single reference.ipynb  api_test_input.sh  api_test_output.sh  bin_0.fasta  bin_1.fasta  bin_2.fasta  bin_3.fasta  bin_paths.txt  cli_test_input.sh  cli_test_output.sh  fn_err_conf_e15_t5_l150_k9_21.tsv  manual_50p_2e.out  manual_segments_k13_w15_4bins_150overlap.index  reference_metadata.txt  run_manual.sh  single_query.fasta  single_query.fq  single_reference.fasta  various_chromosome_lengths.fasta
test/header/: CMakeLists.txt
(+216 files in other folders)
